zeit.archive changes
====================

0.9.1 (unreleased)
==================

- Nothing changed yet.


0.9.0 (2010-08-30)
==================

- Removed everything from zeit.archive not required by breadcrumbs.


0.8.3 (2010-08-09)
==================

- Removed a pointles and wrong except (#7663).

- Fix tests after product config changes in zeit.cms (#7549).

0.8.2 (2010-07-07)
==================

- Relaxed tests against changes in CP xml format (#7466)
- Raise readable error message when an archive page can't be checked out
  (#7442).


0.8.1 (2010-03-31)
==================

- Using versions from the ZTK.

- Avoid creating superfluous directories (#6968).


0.8.0 (2010-03-10)
==================

- Beim automatischen Anlegen eines Breadcrumb-Indexes für ein Unterresort wird
  automatisch auch ein Index für das Ressort erzeugt. Dabei wird ggf. auch der
  entsprechende Montagsordner erzeugt. (#6926)


0.7.0 (2010-02-08)
==================

- Automatisches anlegen eines Breadcrumb-Indexes beim Veröffentlichen (#6749).

- Weitere product_ids hinzugefügt.


0.6.1 (2009-11-25)
==================

- Überprüfung beim Löschen ob ein Artikel bereits durch Zurückziehen aus der
  Archivseite entfernt wurde.


0.6.0 (2009-11-09)
==================

- Für die Jahresübersichtsseite werden Container nun auch über
  die Methode rebuildVolume korrekt angelegt (siehe 0.4).

- Encoding der Typ-Bezeichnung korrigiert.

- Es werden nun nur noch Artikel mit der product_id "ZEI" (Print-Artikel) zu
  einer Archivseite hinzugefügt.


0.5.1 (2009-10-12)
==================

- Tests repariert.


0.5 (2009-10-05)
================

- Neuer Eventhandler für zurückgezogene Artikel.

- Automatische Veröffentlichung von Archivseiten.


0.4 (2009-09-05)
================

- Jede erschienene Ausgabe in der Jahresübersichtsseite enthält nun auch
  dann einen Container, wenn noch keine Seite 1 veröffentlicht wurde.

- Korrekte Bezeichnung der Index-Seiten.


0.3 (2009-08-31)
================
