@@ -4,7 +4,8 @@ zeit.archive changes
 0.9.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Makre sure the breadcrumb index is published even when it was created before
+  but not published then (#9252).
 
 
 0.9.0 (2010-08-30)
